# Integrator

./: .gitignore  build.sbt
core/src/main/resources/: application.conf
core/src/main/scala/com/artkostm/integrator/: Integrator.scala
core/src/main/scala/com/artkostm/integrator/clump/: Clump.scala  ClumpContext.scala  ClumpFetcher.scala  ClumpSource.scala  Joins.scala  Sources.scala  Tuples.scala  package.scala
core/src/main/scala/com/artkostm/integrator/macros/: Shutdown.scala
core/src/main/scala/com/artkostm/integrator/routing/: Linx.scala  Request.scala  scaladsl.scala  testdsl.scala
core/src/main/scala/com/artkostm/integrator/transport/: Pipelining.scala  SslChannelInitializer.scala
examples/src/main/eta/: ChangeLog.md  example.cabal
examples/src/main/eta/Example/: Transform.hs
examples/src/main/resources/: applocation.conf
project/: Dependencies.scala  build_BACKUP_49804.properties  plugins.sbt
sandbox/src/main/java/router/: OrderlessRouter.java  Path.java  RouteResult.java  Router.java
sandbox/src/main/scala/com/artkostm/integrator/: ConfigExample.scala
src/main/java/: Test.java
src/main/java/router/: MethodlessRouter.java
src/main/resources/: application.conf
src/main/scala/com/artkostm/integrator/: ConfigExample.scala  Configuration.scala  Routing.scala
src/main/scala/com/artkostm/integrator/router/: Router.scala
src/main/scala/com/artkostm/integrator/sandbox/: Classes.scala  Diode.scala  Graph.scala  MacroGL.scala  Network.scala  SimpleXORNeuralNetwork.scala  Try.scala
(+41 files in other folders)
